<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.DetailsActivity">

        <ImageView
            android:id="@+id/ivBanner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvTitle"
            style="@style/FirstHeadingTheme"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:maxWidth="@dimen/_200sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBanner" />


        <TextView
            android:id="@+id/tvDesc"
            style="@style/SecondHeadingTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <LinearLayout
            android:id="@+id/llBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDesc">

            <TextView
                android:id="@+id/tvBudget"
                style="@style/SecondHeadingTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/tvBudgetValue"
                style="@style/SecondHeadingTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/llReleaseDate"
            app:layout_constraintStart_toEndOf="@id/llBudget"
            app:layout_constraintTop_toBottomOf="@id/tvDesc">

            <TextView
                android:id="@+id/tvDuration"
                style="@style/SecondHeadingTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/tvDurationValue"
                style="@style/SecondHeadingTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDesc">

            <TextView
                android:id="@+id/tvReleaseDate"
                style="@style/SecondHeadingTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/releaseDate"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/tvReleaseDateValue"
                style="@style/SecondHeadingTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:maxLines="1" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvGenres"
            style="@style/SecondHeadingTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/genres"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llReleaseDate" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGenres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGenres" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>